tests/baselines/reference/tsxReactEmit5.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
==== test.d.ts (0 errors) ====
    export var React;
    
==== react-consumer.tsx (0 errors) ====
    import {React} from "./test";
    // Should emit test_1.React.createElement
    //  and React.__spread
    var foo: any;
    var spread1 = <div x='' {...foo} y='' />;
    